2017-08-30  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 41567: Completion/Unix/Command/_tmux: Complete detached
	sessions first for attach-session.

	* 41566: Completion/Unix/Command/_tmux: Complete only attached
	sessions for detach-session.

	* 41564: Completion/Unix/Command/_tmux: Complete environment
	variables and their values for set-environment and
	show-environment.

	* 41557: Completion/Unix/Command/_tmux: show-environment,
	set-environment: Make -g,-t mutually exclusive.

	* 41558: Completion/Unix/Command/_tmux: Complete option names
	for show-options and show-window-options.

2017-08-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41608 (plus tests): Src/exec.c, Test/C03traps.ztst: ERR_EXIT
	behaviour restored when executing a function in body of else.

2017-08-29  Андрей Стоцкий (_RuRo_)  <ruro.ruro@ya.ru>

	* 41618: Completion/Unix/Command/_todo.sh: Added some arguments
	autocompletion to _todo.sh.

2017-08-29  Oliver Kiddle  <opk@zsh.org>

	* 41617: Completion/Linux/Command/_tracepath: complete new options

	* 41616: Completion/Unix/Command/_entr: update options to 3.8

	* unposted: Completion/Unix/Type/_bpf_filters:
	add missing #autoload directive

2017-08-28  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* unposted: Config/version.mk: Post-release version bump.

2017-08-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* unposted: Config/version.mk: 5.4.2.

2017-08-25  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 41599: README, Etc/FAQ.yo: updates for 5.4.2.

2017-08-25  William da Silva  <w.vigolodasilva@gmail.com>

	* 41602 (tweaked): Completion/Unix/Command/_gpg: Improve wording
	in gpg completion.

2017-08-25  Oliver Kiddle  <opk@zsh.org>

	* 41601: Completion/Unix/Command/_arp,
	Completion/Unix/Command/_route: handle system differences
	in arp completion and add function for route

	* 41600: Completion/Unix/Command/_mpc: fix quoting of
	songs for completion and avoid sending errors to stderr
