@@ -1,3 +1,9 @@
+2017-08-31  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 41627: Src/loop.c, Test/C03traps.ztst: fix problem with
+	ERR_RETURN in initialisation scripts and also on nested
+	function involving ERR_RETURN suppression in the caller.
+
 2017-08-30  Daniel Shahaf  <d.s@daniel.shahaf.name>
 
 	* 41567: Completion/Unix/Command/_tmux: Complete detached
